--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
+EditorStartupMap=/Game/EscapeBuilding.EscapeBuilding
+GameDefaultMap=/Game/EscapeBuilding.EscapeBuilding
+GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameMode_BP.BuildingEscapeGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
